# finalindoor

./: .gitmodules  Rendering_Framework.sln
Rendering_Framework/: CMakeLists.txt  Rendering_Framework.vcxproj  Rendering_Framework.vcxproj.filters  fragment.glsl  imgui.ini  main.cpp  stb_image.h  vertex.glsl
Rendering_Framework/Debug/: vc140.idb
Rendering_Framework/Debug/Renderin.ADA5FF44.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Rendering_Framework.lastbuildstate
Rendering_Framework/assets/: trice.mtl
Rendering_Framework/x64/Debug/: vc140.idb
Rendering_Framework/x64/Debug/Renderin.ADA5FF44.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Rendering_Framework.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Rendering_Framework/x64/Release/Renderin.ADA5FF44.tlog/: CL.read.1.tlog  CL.write.1.tlog  Rendering_Framework.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
